tests/typechecking/valid/simple_mul_float_int.ml
let x=5 in let y=2.3 in x*.y