tests/typechecking/invalid/add_float_for_int_var.ml
let x=5 in let y=8. in x+y